# switcheroo-control

./: NEWS  README.md  meson.build  meson_options.txt
data/: 30-pci-intel-gpu.hwdb  meson.build  switcheroo-control.service.in
data/scripts/: generate-hwdb.c
debian/: changelog  control  copyright  dde-switcheroo.conf  rules  switcheroo-control.install  watch
debian/deepin/: OWNERS
debian/patches/: 0001-add-dde-am-launch-apps-support.patch  series
debian/source/: options
debian/upstream/: metadata
docs/: meson.build  switcheroo-control-docs.xml  switcherooctl.xml
src/: info-cleanup.c  meson.build  switcheroo-control.c  switcheroo-control.gresource.xml  switcherooctl.in
tests/: integration-test.py  meson.build
tests/app/: Makefile  switcheroo-control-test-app  switcheroo-control-test-app.desktop.in
