option('systemdsystemunitdir',
  type: 'string',
  value: '',
  description: 'Directory for systemd service files',
)

option('hwdbdir',
  type: 'string',
  value: '',
  description: 'Directory for hwdb files',
)

option('gtk_doc',
  type: 'boolean',
  value: false,
  description: 'Build docs',
)

option('tests',
  description: 'Whether to run tests',
  type: 'boolean',
  value: false
)
